Add GitHub Link on Welcome Page 08012025 1500HRS

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -62,3 +62,11 @@ body {
     max-height: 400px;
     overflow-y: auto;
 }
+
+.custom-icon {
+    font-size: 28px;
+}
+
+.justified-text {
+    text-align: justify;
+}
